[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.52.0", features = ["csv"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = { version = "0.2.105", features = ["serde-serialize"] }
web-sys = { version = "0.3.82", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[lib]
crate-type = ["cdylib", "rlib"]
